--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
-  text-align: center;
+body{
+  background: #f5f5f5;
+  margin: 0;
+  font-family: Roboto;
+};
+
+a{
+  color: #222;
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header{
+  width: 100%;
+  height: auto;
+  background: white;
+  border-bottom: 3px solid #f5f5f5;
+  font-family: Roboto;
+};
+
+.built-text-size {
+  font-family: Roboto;
+  font-size: 14px;
+};
+
+.cir{
+  display: inline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.circle{
+  height: 40px;
+  width: 40px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  border: solid 1px white;
+  display: inline-block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.text-link{
+  text-decoration: none;
+}
+
+.text-link-2{
+  text-decoration: none;
+}
+
+ul li{
+  list-style: none;
+}
+
+.nav-card {
+  width: auto;
+  height: auto;
+  background: #f5f5f5;
+  border-radius: 25px;
+  padding: 10px 15px;
+  color: #222;
+  font-family: Roboto;
+}
+
+.nav-card:hover {
+  background: linear-gradient(90deg, #cf2da0, #dd1d41);
+  color: #fff;
+}
+
+.active{
+  background: linear-gradient(90deg, #cf2da0, #dd1d41);
+  color: #fff;
+}
+
+.flex{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.flex-box{
+  width: 550px;
+  height: auto;
+  padding: 12px 15px;
+  background: #f5f5f5;
+  border-radius: 15px;
+  font-family: Roboto;
+}
+
+.read-more{
+  color: #dd1d41;
+  font-size: 14px;
+  font-weight: bold;
+  float: right;
+  font-family: Roboto;
+}
+
+.icon {
+  color: #222;
+}
+
+.footer{
+  width: 100%;
+  height: auto;
+  background: linear-gradient(90deg, #cf2da0, #dd1d41);
+  padding: 70px 20px;
+  color: #f5f5f5;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-family: Roboto;
 }
